Tilføjer mappe med billeder

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <title>Dreamplan.io</title>
 </head>
+
+<!-- Link from font awesome in the head section, which let me use different icons in the code-->
+
 <body>
     
 </body>
