--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 <!-- Link from font awesome in the head section, which let me use different icons in the code-->
 
 <body>
+
+<!-- Adding the html for my navigation-bar and my logo, plus the icon for the burger menu-->    
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo2"><a href="#"><img src="./Images/Primary logo black.png" alt="Logo" width="100" height="100"></a></label>
+        <label class="logo"><img src="./Images/Primary logo white.png" alt="Logo" width="100" height="100"></label>
+        <ul>
+            <li><a href="#Start">Om løsningen</a></li>
+            <li><a href="#Function">Om Os</a></li>
+            <li><a href="#part">Priser</a></li>
+            <li><a href="#view">Blog</a></li>
+            <li><a href="#footer">Kontakt</a></li>
+            <button class="btn1">Log ind</button>
+            <button class="btn2">Kom igang</button>
+        </ul>
+    </nav>
     
 </body>
 </html>
