--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Dreamplan.io</title>
 </head>
 
-<!-- Link from font awesome in the head section, which let me use different icons in the code-->
+<!-- Link from font awesome in the head section, which let me use different icons in the code -->
 
 <body>
 
-<!-- Adding the html for my navigation-bar and my logo, plus the icon for the burger menu-->    
+<!-- Adding the html for my navigation-bar and my logo, plus the icon for the burger menu -->    
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
@@ -33,6 +33,20 @@
             <button class="btn2">Kom igang</button>
         </ul>
     </nav>
+
+<!-- Adding the html for my hero section, with a heading, text and a picture -->
+
+    <section class="container hero row">
+        <div>
+            <h1>Find penge til det, <br> du drømmer om</h1>
+            <p class="info7">Mange boligejere er rigere, end de er klar over. <br> DreamPlan hjælper dig med at spare fornuftigt op, så du <br> kan udleve dine drømme.</p>
+            <a class="cta1" href="#">Kom igang</a>
+            <a class="cta2" href="#">Log ind</a>
+          </div>
+        <div class="row">
+            <img src="./Images/Current-view.png" alt="Current-View">
+        </div>
+    </section>
     
 </body>
 </html>
