--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 
-<!-- Adding the html for my hero section, with a heading, text and a picture -->
+<!-- Adding the html for my hero section, with a heading, text, buttons and a picture -->
 
     <section class="container hero row">
         <div>
@@ -42,9 +42,26 @@
             <p class="info7">Mange boligejere er rigere, end de er klar over. <br> DreamPlan hjælper dig med at spare fornuftigt op, så du <br> kan udleve dine drømme.</p>
             <a class="cta1" href="#">Kom igang</a>
             <a class="cta2" href="#">Log ind</a>
-          </div>
+        </div>
         <div class="row">
             <img src="./Images/Current-view.png" alt="Current-View">
+        </div>
+    </section>
+
+<!-- Adding the html for my first section, with a heading, text, button and picture -->
+
+    <section class="solution" id="løsningen">
+        <div class="main">
+            <div class="graph">
+                <img src="./Images/Group 7851.png" alt="Graph">
+            </div>
+            <div class="text">
+              <h2>Vores løsning til dig</h2>
+              <p class="info">Du behøver hverken at være økonomm eller millionær for at få glæde af vores løsning.</p>
+
+              <p class="info1">Vores løsning guider dig igennem hele din samlede økonomi og hjælper dig med at se muligheder i din økonomi, du ikke vidste du havde.</p>
+              <a class="cta3" href="#">Se mere</a>
+            </div>
         </div>
     </section>
     
