--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
             </div>
         </div>
     </section>
+
+<!-- Adding the html for my next section, which includes the same elements as last section -->
+
+    <section class="Start" id="Start">
+        <div class="main2">
+            <div class="text2">
+             <h2>Sådan kommer du igang</h2>
+             <p class="info2">Når du klikker på linket kommer der en række af spørgsmål. <br> Du skal slev taste din og din partners alder og indkomst <br> ind samt jeres opsparing resten hjælper vi dig med at <br> indhente.</p>
+             <a class="cta4" href="#">Se mere</a>
+            </div>
+            <div class="chatflow">
+             <img src="./Images/Group 7852.png" alt="Chat">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
