--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
             </div>
         </div>
     </section>
+
+<!-- html for my function-section, which is made like the first section -->    
+
+    <section class="Function" id="Function">
+        <div class="main3">
+            <div class="screen">
+                <img src="./Images/om-løsningen-Current-View 1.png" alt="Mock-up">
+            </div>
+        <div class="text3">
+            <h2>Løsningens Funktioner</h2>
+            <p class="info3">Dreamplan viser dig udviklingen i din formue både den nuværende og hvis du fælger Dreamplans anbefalinger. Vi viser også om du har råd til det du går og drømmer om.</p>
+            <a class="cta5" href="#">Se mere</a>
+        </div>
+        </div>
+    </section>
     
 </body>
 </html>
