--- a/index.html
+++ b/index.html
@@ -87,10 +87,25 @@
             <div class="screen">
                 <img src="./Images/om-løsningen-Current-View 1.png" alt="Mock-up">
             </div>
-        <div class="text3">
-            <h2>Løsningens Funktioner</h2>
-            <p class="info3">Dreamplan viser dig udviklingen i din formue både den nuværende og hvis du fælger Dreamplans anbefalinger. Vi viser også om du har råd til det du går og drømmer om.</p>
-            <a class="cta5" href="#">Se mere</a>
+            <div class="text3">
+             <h2>Løsningens Funktioner</h2>
+             <p class="info3">Dreamplan viser dig udviklingen i din formue både den nuværende og hvis du fælger Dreamplans anbefalinger. Vi viser også om du har råd til det du går og drømmer om.</p>
+             <a class="cta5" href="#">Se mere</a>
+            </div>
+        </div>
+    </section>
+
+<!-- html for my data-section, which is made like the second section -->   
+
+    <section class="Data" id="Data">
+        <div class="main2">
+        <div class="text5">
+            <h2 class="heading">Datasikkerhed</h2>
+            <p class="info8">Datasikkerhed og dataetik er vigtig for vores kunder og for os. <br> Vi passer på dine data. og deler ikke dine data med nogen uden dit samtykke.</p>
+            <a class="cta4" href="#">Se mere</a>
+        </div>
+        <div class="lock">
+            <img src="./Images/lock 1.png" alt="Lock">
         </div>
         </div>
     </section>
