--- a/index.html
+++ b/index.html
@@ -99,14 +99,30 @@
 
     <section class="Data" id="Data">
         <div class="main2">
-        <div class="text5">
-            <h2 class="heading">Datasikkerhed</h2>
-            <p class="info8">Datasikkerhed og dataetik er vigtig for vores kunder og for os. <br> Vi passer på dine data. og deler ikke dine data med nogen uden dit samtykke.</p>
-            <a class="cta4" href="#">Se mere</a>
+            <div class="text5">
+             <h2 class="heading">Datasikkerhed</h2>
+             <p class="info8">Datasikkerhed og dataetik er vigtig for vores kunder og for os. <br> Vi passer på dine data. og deler ikke dine data med nogen uden dit samtykke.</p>
+             <a class="cta4" href="#">Se mere</a>
+            </div>
+            <div class="lock">
+             <img src="./Images/lock 1.png" alt="Lock">
+            </div>
         </div>
-        <div class="lock">
-            <img src="./Images/lock 1.png" alt="Lock">
-        </div>
+    </section>
+
+<!-- html for my partner-section, which is coded like the first and third section -->   
+
+    <section class="Partner" id="part">
+        <div class="main3">
+            <div class="partners">
+                <img class="desk" src="./Images/Group 7853.png" alt="partners">
+                <img class="mobile" src="./Images/Group 7870.png" alt="part">
+            </div>
+            <div class="text3">
+             <h2>Samarbejdspartnere</h2>
+             <p class="info3">Vi har fundet de dygtigeste samarbejdspartnere, så det bliver nemmere for dig at hente dine data og finde de rigtige og bedste finansielle produkter.</p>
+             <a class="cta5" href="#">Se mere</a>
+            </div>
         </div>
     </section>
     
