--- a/index.html
+++ b/index.html
@@ -125,6 +125,42 @@
             </div>
         </div>
     </section>
+
+<!-- html for my clients-section, which includes a heading, text & cards -->   
+
+    <section class="clients" id="view">
+        <div class="text4">
+            <h2>Kundeanmeldelser</h2>
+            <p class="info4">Vi værdsætter vores kunder meget højt, da det er jer der er fundamentet <br> for vores eksistens. Vi ville elske at høre om din oplevelse med os.</p>
+            <p class="info4">Send en besked til <strong>lone@dreamplan.io</strong></p>
+        </div>
+        <div class="box">
+            <div class="card">
+             <p class="info5">"Smuk løsning med mange fede funktioner, selvom der andre muligheder på markedet, finder jeg Dreamplan perfekt og bruger den absoult fremover"</p>
+            <p class="info6">-Jens Jensen</p>
+             </div>
+             <div class="card">
+             <p class="info5">"Smuk løsning med mange fede funktioner, selvom der andre muligheder på markedet, finder jeg Dreamplan perfekt og bruger den absoult fremover"</p>
+             <p class="info6">-Jens Jensen</p>
+            </div>
+            <div class="card">
+             <p class="info5">"Smuk løsning med mange fede funktioner, selvom der andre muligheder på markedet, finder jeg Dreamplan perfekt og bruger den absoult fremover"</p>
+             <p class="info6">-Jens Jensen</p>
+            </div>
+            <div class="card">
+             <p class="info5">"Meget nemt at finde rundt i appen. Jeg oplever især en stor motivation for at spare op. Deres "mål" funktion gør det nemmere at visualisere mine mål."</p>
+             <p class="info6">-Casper Christensen</p>
+            </div>
+            <div class="card">
+             <p class="info5">"Meget nemt at finde rundt i appen. Jeg oplever især en stor motivation for at spare op. Deres "mål" funktion gør det nemmere at visualisere mine mål."</p>
+             <p class="info6">-Casper Christensen</p>
+            </div>
+            <div class="card">
+             <p class="info5">"Meget nemt at finde rundt i appen. Jeg oplever især en stor motivation for at spare op. Deres "mål" funktion gør det nemmere at visualisere mine mål."</p>
+             <p class="info6">-Casper Christensen</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
