--- a/index.html
+++ b/index.html
@@ -161,6 +161,60 @@
             </div>
         </div>
     </section>
+
+<!-- html for my footer, which includes a logo, contact information, links for SoMe & a single section with a text -->  
+
+    <footer id="footer">
+        <section class="container2">
+            <div class="contact">
+                <img src="./Images/Primary logo white.png" alt="logo" width="100" height="100">
+                <br>
+                <p><i class="fa-solid fa-location-dot"></i> Applebys PL 7, 1411 København, DK</p>
+                <p><i class="fa-solid fa-envelope"></i> Kundeservice@dreamplan.io</p>
+                <p><i class="fa-solid fa-phone"></i> +45 4096 5874</p>
+                <p><i class="fa-solid fa-book"></i> CVR 40965874</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>Følg os på sociale medier:</p>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </div>
+            <div class="copy">
+                <p></p>
+            </div>
+            <div class="links">
+                <p href="#">Erhverv</p>
+                <p href="#">Investorer</p>
+                <p href="#">Kundepanel & Ambassadør</p>
+                <p href="#">Kontakt</p>
+                <p href="#">Spørgsmål & svar</p>
+                <p href="#">Dreamplans beregninger</p>
+                <p href="#">Presse</p>
+                <p href="#">Karriere</p>
+                <p href="#">Persondatapolitik</p>
+                <p href="#">Brugervilkår</p>
+                <p href="#">Behandling af cookies</p>
+            </div>
+
+        </section>
+        <section class="copyright">
+            © Copyright Dreamplan.io
+        </section>
+    </footer>
+
+<!-- Adding script at the bottom of my html, which let me change different elements with the class "scrolling-active". it is used to make the menu visible when scrolling down -->
+
+    <script>
+        window.addEventListener('scroll', function () {
+            let header = document.querySelector('nav');
+            let windowPosition = window.scrollY > 0;
+            header.classList.toggle('scrolling-active', windowPosition);
+        })
+    </script>
     
 </body>
 </html>
