--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <br>
                 <br>
                 <p>Følg os på sociale medier:</p>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.linkedin.com/company/dreamplan/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/DreamPlan.io" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
             </div>
             <div class="copy">
                 <p></p>
